--- a/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
+++ b/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
@@ -213,6 +213,18 @@
     <Compile Include="Migrations\201702131511036_AddingBloodSugarTable.Designer.cs">
       <DependentUpon>201702131511036_AddingBloodSugarTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702131725362_falseone.cs" />
+    <Compile Include="Migrations\201702131725362_falseone.Designer.cs">
+      <DependentUpon>201702131725362_falseone.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702131731040_falseone2.cs" />
+    <Compile Include="Migrations\201702131731040_falseone2.Designer.cs">
+      <DependentUpon>201702131731040_falseone2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201702131740425_RebuildingTables1.cs" />
+    <Compile Include="Migrations\201702131740425_RebuildingTables1.Designer.cs">
+      <DependentUpon>201702131740425_RebuildingTables1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -299,6 +311,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702131511036_AddingBloodSugarTable.resx">
       <DependentUpon>201702131511036_AddingBloodSugarTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702131725362_falseone.resx">
+      <DependentUpon>201702131725362_falseone.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702131731040_falseone2.resx">
+      <DependentUpon>201702131731040_falseone2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702131740425_RebuildingTables1.resx">
+      <DependentUpon>201702131740425_RebuildingTables1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
