added google calendar

--- a/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
+++ b/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
@@ -325,6 +325,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\google.cshtml" />
+    <Content Include="Views\Home\AddingSugar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
