--- a/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
+++ b/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
@@ -262,9 +262,14 @@
     <Compile Include="Migrations\201702162321114_pie1.Designer.cs">
       <DependentUpon>201702162321114_pie1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702172046064_pie11.cs" />
+    <Compile Include="Migrations\201702172046064_pie11.Designer.cs">
+      <DependentUpon>201702172046064_pie11.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BloodSugar.cs" />
+    <Compile Include="Models\caltoid.cs" />
     <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -374,6 +379,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702162321114_pie1.resx">
       <DependentUpon>201702162321114_pie1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702172046064_pie11.resx">
+      <DependentUpon>201702172046064_pie11.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
