--- a/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
+++ b/BllodSugarTester/BllodSugarTester/BllodSugarTester.csproj
@@ -348,6 +348,7 @@
     <Content Include="Views\Home\AddingSugar.cshtml" />
     <Content Include="Views\Home\DisplayNumbers.cshtml" />
     <Content Include="Views\Home\Insulin.cshtml" />
+    <Content Include="Views\Home\DisplayNumbersMonth.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
